# jni-test

./: pom.xml  readme.md
cpp/: CMakeLists.txt  jni_main.cpp
src/main/java/: org_example_DatabaseConnector.h
src/main/java/org/example/: DatabaseConnector.java
